# sokker-ntdb

./: .gitignore  README.md
sokker/: .dockerignore  .env  Dockerfile  cl.csv  cl.json  cl_fixtures_1.json  cl_fixtures_2.json  cl_fixtures_3.json  convert_cl.py  db.sqlite3  docker-compose.yml  fly.toml  load_env.sh  make.bat  manage.py  pyproject.toml  release.sh  req.txt  requirements.txt  start.sh  structure.sql  vik.pub  vik.pub.pub  vitorov74  vitorov74.pub
sokker/arcades/: admin.py  models.py  tables.py  urls.py  utils.py  views.py
sokker/arcades/migrations/: 0001_initial.py  0002_alter_game_t_id_h_alter_game_t_id_v.py  0003_cupcategory_alter_game_t_id_h_alter_game_t_id_v_and_more.py  0004_cup_is_cl.py  0005_cupteams_pot_id.py  0006_cup_c_start_date.py  0007_cupteams_rating.py  0008_cupteams_cl_draw.py  0009_alter_game_g_status.py  0010_cup_rating_limit_game_rating_away_game_rating_home.py
sokker/arcades/templatetags/: custom_tags_arcades.py
sokker/euro/: admin.py  models.py  tables.py  urls.py  views.py
sokker/euro/migrations/: 0001_initial.py  0002_rename_c_id_cup_id.py  0003_alter_cup_c_edition_alter_cup_c_g_winners_and_more.py  0004_alter_cup_c_draw_date.py  0005_alter_cup_c_draw_date.py  0006_ntteam.py  0007_alter_ntteam_t_created_alter_ntteam_t_email_and_more.py  0008_remove_ntteam_t_created_and_more.py  0009_alter_ntteam_t_s_ranking.py  0010_cupteams.py  0011_cupdraw.py  0012_game.py  0013_alter_game_group_id.py  0014_alter_game_goals_away_alter_game_goals_home.py  0015_rankgroups.py  0018_cup_header_image.py  (+7 more)
sokker/ntdb/: admin.py  apps.py  filters.py  forms.py  ip_logs.txt  menu.py  middleware.py  models.py  pharsers.py  tables.py  urls.py  utils.py  views.py
sokker/sokker/: asgi.py  settings.py  urls.py  wsgi.py
sokker/sokker_base/: admin.py  api.py  models.py
sokker/sokker_ntdb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sokker/static/: contact-two.html  fixtures-layout-1.html  gallery-2-col.html  gallery-3-col.html  gallery-clasic.html  gallery-modern.html  match-details.html  news-grid.html  news-list.html  page-404-one.html  page-404.html  shop-details.html  staff-details.html  staticfiles.json  team-one.html  team-two.html  upcoming-match.html
sokker/tools/: forms.py  urls.py  views.py
(+145 files in other folders)
